# vibe_register

./: .clangd  .gitignore  .opencodeignore  AGENTS.md  CLAUDE.md  FUTURE.md  PLAN.md  README.md  config.json  futureplan.md  imgui.ini  mincpik_performance_review.md  problem.md  research.md  sub_plan.md
.opencode/plans/: transform_lm_plan.md
legacy/: build_display_glfw.sh  build_register_egl.sh  pull.sh  push.sh
new_qc/: CMakeLists.txt  README.md  test_input.csv
new_qc/src/: BackendFactory.cpp  CSVHandler.cpp  OpenGL2Backend.cpp  QCApp.cpp  QCApp.h  VulkanBackend.cpp  main.cpp
new_qc/tests/: CMakeLists.txt  README.md  csv_test.cpp
new_register/: CMakeLists.txt  README.md
new_register/cmake-modules/: FindNETCDF.cmake
new_register/examples/: qc_example.csv
new_register/include/: AppConfig.h  AppState.h  ColourMap.h  GraphicsBackend.h  Interface.h  NiftiVolume.h  OpenGL2Backend.h  OsPrefetch.h  Prefetcher.h  QCState.h  SliceRenderer.h  TagFile.h  TagWrapper.hpp  Transform.h  ViewManager.h  Volume.h  VulkanBackend.h  VulkanHelpers.h  WaylandTouchInput.h  WindowManager.h
new_register/src/: AppConfig.cpp  AppState.cpp  BackendFactory.cpp  ColourMap.cpp  Interface.cpp  NiftiVolume.cpp  OpenGL2Backend.cpp  Prefetcher.cpp  QCState.cpp  SliceRenderer.cpp  TagFile.cpp  TagWrapper.cpp  Transform.cpp  ViewManager.cpp  Volume.cpp  VulkanBackend.cpp  VulkanHelpers.cpp  WaylandTouchInput.cpp  WindowManager.cpp  headless_test_main.cpp  main.cpp
new_register/src/backends/: imgui_impl_osmesa.cpp  imgui_impl_osmesa.h
new_register/src/mincpik/: colour_bar.cpp  colour_bar.h  mincpik_cli.cpp  mincpik_cli.h  mincpik_main.cpp  mosaic.cpp  mosaic.h  text_render.cpp  text_render.h
new_register/src/qc/: Backend.h  BackendFactory.cpp  CSVHandler.h  OpenGL2Backend.cpp  OpenGL2Backend.h  QCApp.cpp  VulkanBackend.cpp  VulkanBackend.h  VulkanHelpers.cpp  VulkanHelpers.h  main.cpp
new_register/tests/: CMakeLists.txt  csv_test.cpp  dump_vol.cpp  generate_headless_baselines.cpp  generate_overlap_refs.cpp  generate_test_mode_refs.cpp  sq1.mnc  sq2.mnc  sq2_tr.mnc  test_app_config.cpp  test_center_of_mass.cpp  test_center_voxel.cpp  test_colour_map.cpp  test_column_layout.cpp  test_coord_sq2tr.cpp  test_coordinate_input.cpp  test_coordinate_sync.cpp  test_debug_start.cpp  test_label_rounding.cpp  test_matrix_debug.cpp  test_minc_dims.cpp  test_mincpik.cpp  test_nifti_load.cpp  test_nifti_mnc_match.cpp  test_overlap.cpp  test_overlap2.cpp  test_overlay_blend.cpp  test_qc_csv.cpp  test_real_data.cpp  test_single_vol.tag  test_tag_file.cpp  test_tag_load.cpp  test_test_mode.cpp  test_thick_slices_com.cpp  test_transform.cpp  test_two_vol.tag  test_volume_info.cpp  test_world_to_voxel.cpp
test_data/: mni_icbm152_t1_tal_nlin_sym_09c.tag  mni_icbm152_t1_tal_nlin_sym_09c_mask.mnc  mni_icbm152_t1_tal_nlin_sym_09c_thick_slices.mnc  tags.tag
